--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <label for="title">Title</label>
             <input type="text" id="title" name="title" placeholder="Your title ..">
 
-            <label for="fname">First Name</label>
+            <label for="fname">First Names</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
         
-            <label for="lname">Last Name</label>
+            <label for="lname">Last Names</label>
             <input type="text" id="lname" name="lastname" placeholder="Your last name..">
 
             <label for="age">Age</label>
