--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CustomerAPI</title>
+    <title>Customer Portal</title>
 </head>
 <body>
-    <form action="register_page">
         <div class="container">
             <h1>Register</h1>
             <p>Please fill in this form soI can sell your data</p>
@@ -24,9 +23,27 @@
             <label for="age">Age</label>
             <input type="text" id="age" name="age" placeholder="Your age..">
 
-            <input type="submit" value="Submit">
+            <button onclick="createCustomer()">Submit</button>
+            <p id="response">Response will go here</p>
         
         </div>
-    </form>
+    
 </body>
+<script>
+function createCustomer() {
+  alert("button clicked");
+  var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function() {
+            if (this.readyState == 4 && this.status == 200) {
+            // Typical action to be performed when the document is ready:
+            console.log(xhttp);
+            document.getElementById("response").innerHTML = xhttp.responseText;
+            }
+        };
+        xhttp.open("POST", "https://localhost:44380/api/Customer", false);
+        xhttp.setRequestHeader("Content-Type", "application/json;charset=UTF-8");   
+        xhttp.send(JSON.stringify({ "firstName": "John", "surname": "Stones", "title": "Mr", "age": 30 }));
+    }
+
+</script>
 </html>
